eks/nodegroup/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go2bank-server-deployment
  labels:
    server: go2bank-server
spec:
  replicas: 3
  selector:
    matchLabels:
      server: go2bank-server
  template:
    metadata:
      labels:
        server: go2bank-server
    spec:
      containers:
      - name: go2bank-server
        image: 888577033729.dkr.ecr.ap-northeast-3.amazonaws.com/go2bank
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-server
        command: 
          - "/app/main"
        resources:
          requests:
            cpu: 100m
