eks/nodegroup/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go2bank-server-service
spec:
  selector:
    server: go2bank-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-server
      name: http-service
  type: ClusterIP
